Remove unnecessary styling to ensure basic wrapping

--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,20 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-evenly;
-    align-content: space-evenly;
-    padding: 32px;
     flex-wrap: wrap;
-    height: 100%;
+    padding: 32px;
+    flex: 2 1 auto;
+
+    
+
 }
 
 .item {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20px;
-    width: 20px;
-    padding: 20px;
-    margin: 5px;
+
+    padding: 2%;
+    margin: 1%;
+    flex: 2 1 auto;
 }
